--- a/project/www/admin/src/template/header_footer.html
+++ b/project/www/admin/src/template/header_footer.html
@@ -254,7 +254,6 @@
       <script src="./src/js/page_admin.js"></script>
       <script src="./../src/js/script.js"></script>
       <script src="./../src/js/le_fetch.js"></script>
-      <script src="./src/js/img-icon.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/sceditor@3/minified/sceditor.min.js"></script>
       <script>
         /*document.querySelectorAll(".text-bbcode").forEach(element => {
@@ -266,5 +265,8 @@
           });
         });*/
         </script>[#CITIZEN_INDEX_JS#]
+        <script src="./src/js/img-icon.js"></script>
+        <script src="./src/js/add_img.js"></script>
+        <script src="./src/js/img_all.js"></script>
   </body>
 </html>
