--- a/project/www/admin/src/template/gameplay/add_mod_screens.html
+++ b/project/www/admin/src/template/gameplay/add_mod_screens.html
@@ -1,19 +1,22 @@
 <div class="display-admin">
     <div class="card-admin" data-state="#about">
         <div class="admin-title"><h1>Screen</h1></div>
-        <form class="admin-contenu" method="post" enctype="multipart/form-data">
+        <form class="admin-contenu" id="form-contenu" method="post" enctype="multipart/form-data">
             <input type="hidden" name="id" value="[#CITIZEN_SCREEN_ID#]" />
             <div class="two-column">
-                <input type="checkbox" class="darkSwitch two-column"[#CITIZEN_SCREEN_MODIF_CHECK#]>
+                <input type="checkbox" name="contenu-visible" id="contenu-visible" class="darkSwitch two-column"[#CITIZEN_SCREEN_MODIF_CHECK#]>
             </div>
             <div class="two-column add-list-img">
-                <img class="img-add" id="img-screen" src="[#CITIZEN_SCREEN_IMG#]" alt="add img"[#CITIZEN_SCREEN_ISPRO#]>
+                <input type="file" accept="image/png, image/jpeg" name="file-img" id="file-img"[#CITIZEN_SCREEN_ISPRO#]>
+                <label for="file-img">
+                    <img class="img-add" id="img-add" src="[#CITIZEN_SCREEN_IMG#]" alt="add img"[#CITIZEN_SCREEN_ISPRO#]>
+                </label>
             </div>
-            <label for="label-1">nom</label><input type="text" name="" id="" value="[#CITIZEN_SCREEN_NOM#]" class="input-admin"[#CITIZEN_SCREEN_ISPRO#]>
-            <label for="label-1">alt</label><input type="text" name="" id="" value="[#CITIZEN_SCREEN_ALT#]" class="input-admin"[#CITIZEN_SCREEN_ISPRO#]>
+            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_SCREEN_NOM#]" class="input-admin"[#CITIZEN_SCREEN_ISPRO#]>
+            <label for="alt">alt</label><input type="text" name="alt" id="alt" value="[#CITIZEN_SCREEN_ALT#]" class="input-admin"[#CITIZEN_SCREEN_ISPRO#]>
             <div class="two-column add-mod-bt">
-                <button class="sauvegarde" id="annuler">annuler</button>
-                <button class="sauvegarde" id="validation">Validation</button>
+                <button class="sauvegarde" id="annuler-form">annuler</button>
+                <button class="sauvegarde" id="validation-form">Validation</button>
             </div>
         </form>
     </div>
