--- a/project/www/admin/src/template/objet/add_mod_arm_vaiss.html
+++ b/project/www/admin/src/template/objet/add_mod_arm_vaiss.html
@@ -1,26 +1,41 @@
 <div class="display-admin">
     <div class="card-admin" data-state="#about">
         <div class="admin-title"><h1>Armement vaisseau</h1></div>
-        <form class="admin-contenu" method="post" enctype="multipart/form-data">
+        <form class="admin-contenu" id="form-contenu" method="post" enctype="multipart/form-data">
             <input type="hidden" name="id" value="[#CITIZEN_ARM_VAISS_ID#]" />
             <div class="two-column">
-                <input type="checkbox" class="darkSwitch two-column"[#CITIZEN_ARM_VAISS_MODIF_CHECK#]>
+                <input type="checkbox" name="contenu-visible" id="contenu-visible" class="darkSwitch two-column"[#CITIZEN_ARM_VAISS_MODIF_CHECK#]>
             </div>
             <div class="two-column add-list-img">
-                <img class="img-add" id="img-art-add" src="./src/images/plus-square-dotted.svg" alt="add img"[#CITIZEN_ARM_VAISS_ISPRO#]>
-                <div class="list_img">[#CITIZEN_ARM_VAISS_IMG#]</div>
+                <div id="add-all-img">
+                    <input
+                    type="File"
+                    name="fileToUploadAll[]"
+                    id="fileToUploadAll"
+                    accept="image/png, image/jpeg"
+                    multiple
+                    />
+                    <figure id="all_img">
+                        <label for="fileToUploadAll">
+                            <img src="./src/images/plus-square-dotted.svg" alt="add img" id="img-add" class="bi bi-file-plus-fill img-add" ondrop="dropHandler(event);"
+                                ondragover="dragOverHandler(event);" />
+                        </label>
+                        <figure id="add_img" class="drop_img">
+                            [#CITIZEN_ARM_VAISS_IMG#]
+                        </figure>
+                    </figure>
+                </div>
             </div>
-            <img src="" alt="" class="two-column">
-            <label for="label-1">nom</label><input type="text" name="" id="" value="[#CITIZEN_ARM_VAISS_NOM#]" class="input-admin"[#CITIZEN_ARM_VAISS_ISPRO#]>
-            <label for="label-1">taille</label>
-            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_ARM_VAISS_ISPRO#]>
+            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_ARM_VAISS_NOM#]" class="input-admin"[#CITIZEN_ARM_VAISS_ISPRO#]>
+            <label for="taille">taille</label>
+            <select name="taille" id="taille-select" class="input-admin"[#CITIZEN_ARM_VAISS_ISPRO#]>
                 <option value=""></option>[#CITIZEN_ARM_VAISS_TAILLE#]
             </select>
-            <label for="label-1">constructeur</label>
-            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_ARM_VAISS_ISPRO#]>
+            <label for="constructeur">constructeur</label>
+            <select name="constructeur" id="constructeur-select" class="input-admin"[#CITIZEN_ARM_VAISS_ISPRO#]>
                 <option value=""></option>[#CITIZEN_ARM_VAISS_CONST#]
             </select>
-            <label for="label-1">contenu</label><textarea name="" id="" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ARM_VAISS_ISPRO#]>[#CITIZEN_ARM_VAISS_CONTENU#]</textarea>
+            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ARM_VAISS_ISPRO#]>[#CITIZEN_ARM_VAISS_CONTENU#]</textarea>
             <input type="radio" class="radio-onglet" id="onglet-info" name="radio-onglet" value="" checked>
             <input type="radio" class="radio-onglet" id="onglet-lieu" name="radio-onglet" value="">
             <div id="div-all-tab" class="two-column">
@@ -31,7 +46,7 @@
                     </ul>
                 </div>
                 <div class="div-onglet" id="div-onglet-info">
-                    <button class="sauvegarde" id="add-lieu">Ajouter une information</button>
+                    <button class="sauvegarde bt-add" id="add-info">Ajouter une information</button>
                     <table id="tab-all">
                         <tr>
                             <th>Informations</th>
@@ -44,7 +59,7 @@
                     </table>
                 </div>
                 <div class="div-onglet" id="div-onglet-lieu">
-                    <button class="sauvegarde" id="add-lieu">Ajouter un lieu</button>
+                    <button class="sauvegarde bt-add" id="add-lieu">Ajouter un lieu</button>
                     <table id="tab-all">
                         <tr>
                             <th>Nom</th>
@@ -58,8 +73,8 @@
                 </div>
             </div>
             <div class="two-column add-mod-bt">
-                <button class="sauvegarde" id="annuler">annuler</button>
-                <button class="sauvegarde" id="validation">Validation</button>
+                <button class="sauvegarde" id="annuler-form">annuler</button>
+                <button class="sauvegarde" id="validation-form">Validation</button>
             </div>
         </form>
     </div>
