add repository cat

--- a/project/www/admin/src/template/menu_admin.html
+++ b/project/www/admin/src/template/menu_admin.html
@@ -2,28 +2,41 @@
     <div id="admin_menu">
         <ul>
             <li><a class="radio" href="./?ind=espace_user">Mon compte</a></li>
+            <hr>
             <li><a class="radio" href="./?ind=articles">Les articles</a></li>
+            <li><a class="radio" href="./?ind=cat_articles">catégorie</a></li>
+            <li><a class="radio" href="./?ind=cat_type_articles">type</a></li>
+            <hr>
             <li><a class="radio" href="./?ind=screens">Les screens</a></li>
+            <hr>
             <li><a class="radio" href="./?ind=arm_fps">L'armement FPS</a></li>
             <li><a class="radio" href="./?ind=arm_vaiss">L'armement vaisseau</a></li>
+            <li><a class="radio" href="./?ind=cat_arm">catégorie</a></li>
+            <li><a class="radio" href="./?ind=cat_couleur">couleur</a></li>
+            <li><a class="radio" href="./?ind=cat_taille">taille d'armement</a></li>
+            <hr>
             <li><a class="radio" href="./?ind=lieux">Lieux</a></li>
+            <li><a class="radio" href="./?ind=cat_lieux">catégories</a></li>
+            <li><a class="radio" href="./?ind=cat_risque">risque</a></li>
+            <hr>
             <li><a class="radio" href="./?ind=especes">Espèces</a></li>
+            <li><a class="radio" href="./?ind=cat_especes">catégories</a></li>
+            <hr>
             <li><a class="radio" href="./?ind=construct">Constructeurs</a></li>
+            <hr>
             <li><a class="radio" href="./?ind=transports">Transports</a></li>
+            <li><a class="radio" href="./?ind=cat_transp">catégories</a></li>
+            <li><a class="radio" href="./?ind=cat_disp">disponibilités</a></li>
+            <li><a class="radio" href="./?ind=cat_equipem">equipement</a></li>
+            <li><a class="radio" href="./?ind=cat_faibl">faiblesses</a></li>
+            <li><a class="radio" href="./?ind=cat_forces">forces</a></li>
+            <hr>
             <li><a class="radio" href="./?ind=mat_prem">matière première</a></li>
+            <li><a class="radio" href="./?ind=cat_mat_prem">catégorie</a></li>
+            <hr>
             <li><a class="radio" href="./?ind=proprietaires">Propriétaires</a></li>
+            <hr>
             <li><a class="radio" href="./?ind=services">Services</a></li>
-            <li><a class="radio" href="./?ind=transports">catégories espèces</a></li>
-            <li><a class="radio" href="./?ind=transports">catégories lieux</a></li>
-            <li><a class="radio" href="./?ind=transports">catégorie armement</a></li>
-            <li><a class="radio" href="./?ind=transports">catégories transports</a></li>
-            <li><a class="radio" href="./?ind=transports">couleur</a></li>
-            <li><a class="radio" href="./?ind=transports">disponibilités</a></li>
-            <li><a class="radio" href="./?ind=transports">equipement</a></li>
-            <li><a class="radio" href="./?ind=transports">faiblesses vaisseau</a></li>
-            <li><a class="radio" href="./?ind=transports">forces vaisseau</a></li>
-            <li><a class="radio" href="./?ind=transports">taille armement vaisseau</a></li>
-            <li><a class="radio" href="./?ind=transports">risque</a></li>
             [#CITIZEN_INDEX_ADD_MENU_ADMIN#]
         </ul>
     </div>
