--- a/project/www/admin/src/template/objet/add_mod_arm_vaiss.html
+++ b/project/www/admin/src/template/objet/add_mod_arm_vaiss.html
@@ -17,8 +17,7 @@
                     />
                     <figure id="all_img">
                         <label for="fileToUploadAll">
-                            <img src="./src/images/plus-square-dotted.svg" alt="add img" id="img-add" class="bi bi-file-plus-fill img-add" ondrop="dropHandler(event);"
-                                ondragover="dragOverHandler(event);" />
+                            <img src="./src/images/plus-square-dotted.svg" alt="add img" id="img-add" class="img-add" />
                         </label>
                         <figure id="add_img" class="drop_img">
                             [#CITIZEN_ARM_VAISS_IMG#]
