--- a/project/www/src/css/civilisation.css
+++ b/project/www/src/css/civilisation.css
@@ -25,3 +25,47 @@ div.desc {
   text-align: center;
   color: aliceblue;
 }
+.hero {
+  display: inline-block;
+  position: relative;
+  width: 400px;
+  min-width: 400px;
+  height: 400px;
+  border-radius: 30px;
+  overflow:hidden;
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+  margin: 30px;
+}
+
+.hero-profile-img {
+  width: 100%;
+  height: 60%;
+}
+
+.hero-description-bk {
+  background-image: linear-gradient(0deg , #3f5efb, #fc466b);
+  border-radius: 30px;
+  position: absolute;
+  top: 55%;
+  left: -5px;
+  height: 15%;
+  width: 108%;
+  transform: skew(19deg, -9deg);
+}
+
+.especes .hero-description-bk {
+  background-image: linear-gradient(-20deg , var(--blue-vert-color), var(--dark-black-color))
+}
+
+
+.hero-title a {
+  position: absolute;
+  color: #fff;
+  font-weight: 900;
+  left: 150px;
+  bottom: 32%;
+  font-size: 25px;
+}
+
+
+/* END CARD DESIGN */
