modif cat repository

--- a/project/www/admin/src/template/menu_admin.html
+++ b/project/www/admin/src/template/menu_admin.html
@@ -11,7 +11,7 @@
             <hr>
             <li><a class="radio" href="./?ind=arm_fps">L'armement FPS</a></li>
             <li><a class="radio" href="./?ind=arm_vaiss">L'armement vaisseau</a></li>
-            <li><a class="radio" href="./?ind=cat_arm">catégorie</a></li>
+            <li><a class="radio" href="./?ind=cat_arm">catégorie FPS</a></li>
             <li><a class="radio" href="./?ind=cat_couleur">couleur</a></li>
             <li><a class="radio" href="./?ind=cat_taille">taille d'armement</a></li>
             <hr>
@@ -27,7 +27,6 @@
             <li><a class="radio" href="./?ind=transports">Transports</a></li>
             <li><a class="radio" href="./?ind=cat_transp">catégories</a></li>
             <li><a class="radio" href="./?ind=cat_disp">disponibilités</a></li>
-            <li><a class="radio" href="./?ind=cat_equipem">equipement</a></li>
             <li><a class="radio" href="./?ind=cat_faibl">faiblesses</a></li>
             <li><a class="radio" href="./?ind=cat_forces">forces</a></li>
             <hr>
