--- a/project/www/admin/src/template/categories/categorieAndImg.html
+++ b/project/www/admin/src/template/categories/categorieAndImg.html
@@ -1,6 +1,6 @@
 <div class="display-admin">
     <div class="card-admin" data-state="#about">
-        <div class="admin-title"><h1>Screen</h1></div>
+        <div class="admin-title"><h1>[#CITIZEN_CAT_TITLE#]</h1></div>
         <form class="admin-contenu" id="form-contenu" method="post" enctype="multipart/form-data">
             <input type="hidden" name="id" value="[#CITIZEN_CAT_ID#]" />
             <div class="two-column add-list-img">
