debut img princ / debut dialog

--- a/project/www/admin/src/css/onglet.css
+++ b/project/www/admin/src/css/onglet.css
@@ -55,7 +55,7 @@
 #onglet-lieu:checked ~ #div-all-tab #label-onglet-lieu, 
 #onglet-diplom:checked ~ #div-all-tab #label-onglet-diplom, 
 #onglet-contro:checked ~ #div-all-tab #label-onglet-contro, 
-#onglet-gplay-type:checked ~ #div-all-tab #label-gplay-type {
+#onglet-gplayType:checked ~ #div-all-tab #label-onglet-gplayType {
     /*background-color: burlywood;*/
     background: linear-gradient(rgb(36, 36, 141), rgb(0, 0, 128));
     border-bottom: unset;
@@ -69,7 +69,7 @@
 #onglet-lieu:checked ~ #div-all-tab #div-onglet-lieu, 
 #onglet-diplom:checked ~ #div-all-tab #div-onglet-diplom, 
 #onglet-contro:checked ~ #div-all-tab #div-onglet-contro, 
-#onglet-gplay-type:checked ~ #div-all-tab #div-gplay-type {
+#onglet-gplayType:checked ~ #div-all-tab #div-onglet-gplayType {
     display: unset;
 }
 
