--- a/project/www/admin/src/template/gameplay/add_mod_article.html
+++ b/project/www/admin/src/template/gameplay/add_mod_article.html
@@ -33,15 +33,15 @@
             </select>
             <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ARTI_ISPRO#]>[#CITIZEN_ARTI_CONTENU#]</textarea>
             <label for="resume">résumé</label><textarea name="resume" id="resume" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ARTI_ISPRO#]>[#CITIZEN_ARTI_RESUME#]</textarea>
-            <input type="radio" class="radio-onglet" id="onglet-gplay-type" name="radio-onglet" value="" checked>
+            <input type="radio" class="radio-onglet" id="onglet-gplayType" name="radio-onglet" value="" checked>
             <div id="div-all-tab" class="two-column">
                 <div id="div-ul-onglets">
                     <ul id="onglets">
-                        <li id="label-gplay-type"><label for="gplay-type"> Gameplay type </label></li>
+                        <li id="label-onglet-gplayType"><label for="onglet-gplayType"> Gameplay type </label></li>
                     </ul>
                 </div>
-                <div class="div-onglet" id="div-gplay-type">
-                    <button class="sauvegarde bt-add" id="add-lieu">Ajouter un gameplay type</button>
+                <div class="div-onglet" id="div-onglet-gplayType">
+                    <button class="sauvegarde bt-dialog-add" id="add-lieu">Ajouter un gameplay type</button>
                     <table>
                         <tr>
                             <th>Nom</th>
