--- a/project/www/admin/src/template/gameplay/add_mod_construct.html
+++ b/project/www/admin/src/template/gameplay/add_mod_construct.html
@@ -28,7 +28,7 @@
                     </ul>
                 </div>
                 <div class="div-onglet" id="div-onglet-lieu">
-                    <button class="sauvegarde bt-add" id="add-lieu">Ajouter un lieu</button>
+                    <button class="sauvegarde bt-dialog-add" id="add-lieu">Ajouter un lieu</button>
                     <table>
                         <tr>
                             <th>Nom</th>
