--- a/project/www/admin/src/template/objet/add_mod_lieux.html
+++ b/project/www/admin/src/template/objet/add_mod_lieux.html
@@ -48,7 +48,7 @@
                     </ul>
                 </div>
                 <div class="div-onglet" id="div-onglet-info">
-                    <button class="sauvegarde" id="add-lieu">Ajouter une information</button>
+                    <button class="sauvegarde bt-dialog-add" id="add-info">Ajouter une information</button>
                     <table id="tab-all">
                         <tr>
                             <th>Informations</th>
