--- a/project/www/admin/src/template/objet/add_mod_proprietaires.html
+++ b/project/www/admin/src/template/objet/add_mod_proprietaires.html
@@ -41,7 +41,7 @@
                     </ul>
                 </div>
                 <div class="div-onglet" id="div-onglet-info">
-                    <button class="sauvegarde bt-add" id="add-info">Ajouter une information</button>
+                    <button class="sauvegarde bt-dialog-add" id="add-info">Ajouter une information</button>
                     <table id="tab-all">
                         <tr>
                             <th>Informations</th>
@@ -54,7 +54,7 @@
                     </table>
                 </div>
                 <div class="div-onglet" id="div-onglet-lieu">
-                    <button class="sauvegarde bt-add" id="add-lieu">Ajouter un lieu</button>
+                    <button class="sauvegarde bt-dialog-add" id="add-lieu">Ajouter un lieu</button>
                     <table id="tab-all">
                         <tr>
                             <th>Nom</th>
