--- a/project/www/admin/src/template/objet/add_mod_transp.html
+++ b/project/www/admin/src/template/objet/add_mod_transp.html
@@ -67,7 +67,7 @@
                     </ul>
                 </div>
                 <div class="div-onglet" id="div-onglet-info">
-                    <button class="sauvegarde bt-add" id="add-info">Ajouter une information</button>
+                    <button class="sauvegarde bt-dialog-add" id="add-info">Ajouter une information</button>
                     <table id="tab-info">
                         <tr>
                             <th>Informations</th>
@@ -80,7 +80,7 @@
                     </table>
                 </div>
                 <div class="div-onglet" id="div-onglet-force">
-                    <button class="sauvegarde bt-add" id="add-force">Ajouter une force</button>
+                    <button class="sauvegarde bt-dialog-add" id="add-force">Ajouter une force</button>
                     <table id="tab-force">
                         <tr>
                             <th>Nom</th>
@@ -93,7 +93,7 @@
                     </table>
                 </div>
                 <div class="div-onglet" id="div-onglet-faibl">
-                    <button class="sauvegarde bt-add" id="add-faibl">Ajouter une faiblesse</button>
+                    <button class="sauvegarde bt-dialog-add" id="add-faibl">Ajouter une faiblesse</button>
                     <table id="tab-faibl">
                         <tr>
                             <th>Nom</th>
@@ -106,7 +106,7 @@
                     </table>
                 </div>
                 <div class="div-onglet" id="div-onglet-equip">
-                    <button class="sauvegarde bt-add" id="add-equip">Ajouter un équipement</button>
+                    <button class="sauvegarde bt-dialog-add" id="add-equip">Ajouter un équipement</button>
                     <table id="tab-equip">
                         <tr>
                             <th>Nom</th>
@@ -119,7 +119,7 @@
                     </table>
                 </div>
                 <div class="div-onglet" id="div-onglet-arm">
-                    <button class="sauvegarde bt-add" id="add-arm">Ajouter un armement</button>
+                    <button class="sauvegarde bt-dialog-add" id="add-arm">Ajouter un armement</button>
                     <table id="tab-arm">
                         <tr>
                             <th>Nom</th>
@@ -132,7 +132,7 @@
                     </table>
                 </div>
                 <div class="div-onglet" id="div-onglet-lieu">
-                    <button class="sauvegarde bt-add" id="add-lieu">Ajouter un lieu</button>
+                    <button class="sauvegarde bt-dialog-add" id="add-lieu">Ajouter un lieu</button>
                     <table id="tab-lieux">
                         <tr>
                             <th>Nom</th>
