--- a/project/www/admin/src/template/objet/add_mod_especes.html
+++ b/project/www/admin/src/template/objet/add_mod_especes.html
@@ -53,7 +53,7 @@
                     </ul>
                 </div>
                 <div class="div-onglet" id="div-onglet-info">
-                    <button class="sauvegarde bt-add" id="add-info">Ajouter une information</button>
+                    <button class="sauvegarde bt-dialog-add" id="add-info">Ajouter une information</button>
                     <table id="tab-all">
                         <tr>
                             <th>Nom</th>
@@ -66,7 +66,7 @@
                     </table>
                 </div>
                 <div class="div-onglet" id="div-onglet-diplom">
-                    <button class="sauvegarde bt-add" id="add-diplom">Ajouter une diplomatie</button>
+                    <button class="sauvegarde bt-dialog-add" id="add-diplom">Ajouter une diplomatie</button>
                     <table id="tab-all">
                         <tr>
                             <th>Nom</th>
@@ -79,7 +79,7 @@
                     </table>
                 </div>
                 <div class="div-onglet" id="div-onglet-contro">
-                    <button class="sauvegarde bt-add" id="add-contro">Ajouter un contrôle</button>
+                    <button class="sauvegarde bt-dialog-add" id="add-contro">Ajouter un contrôle</button>
                     <table id="tab-all">
                         <tr>
                             <th>Nom</th>
