--- a/project/www/admin/src/template/objet/add_mod_proprietaires.html
+++ b/project/www/admin/src/template/objet/add_mod_proprietaires.html
@@ -23,7 +23,7 @@
                         <label for="fileToUploadAll">
                             <img src="./src/images/plus-square-dotted.svg" alt="add img" id="img-add" class="img-add" />
                         </label>
-                        <figure id="add_img" class="drop_img">
+                        <figure id="add_img" class="drop_img img-and-main">
                             [#CITIZEN_PROPR_IMG#]
                         </figure>
                     </figure>
